--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
       "last 1 safari version"
     ]
   },
+  
   "devDependencies": {
     "electron": "^6.0.3",
+    "electron-builder": "^21.2.0",
     "image-size": "^0.7.4",
     "react-scripts": "3.1.1",
     "url": "^0.11.0"
   },
+
   "build": {
     "productName": "example",
     "appId": "com.example.server",
