--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.7",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-app-rewired": "^2.1.5",
+    "react-dom": "^16.9.0",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-use": "^13.22.4",
+    "redux": "^4.0.5",
+    "styled-components": "^5.0.0",
+    "swr": "^0.1.16"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "electron": "electron .",
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000/ electron .",
     "packager": "npm run build && rm -rf dist && electron-builder --mac"
