--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.9.0",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-use": "^13.22.4",
     "redux": "^4.0.5",
-    "styled-components": "^5.0.0",
-    "swr": "^0.1.16"
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "electron": "electron .",
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000/ electron .",
-    "packager": "npm run build && rm -rf dist && electron-builder --mac"
+    "packager": "npm run build && rm -rf dist && electron-builder -m"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +54,9 @@
       "build/**/*",
       "package.json"
     ],
+    "win": {
+      "target": "nsis"
+    },
     "directories": {
       "buildResources": "public"
     }
